# AGISIT-2223-team-02

./: .gitignore  README.md  Vagrantfile.docker  Vagrantfile.vbox
labs/arch-arm64/: README.md  bootstrap-mgmt-docker.sh
labs/gcpcloud/: README.md  ansible-gcp-servers-setup-all.yml  ansible-load-credentials.sh  ansible.cfg  gcphosts  terraform-gcp-networks.tf  terraform-gcp-outputs.tf  terraform-gcp-provider.tf  terraform-gcp-servers.tf  terraform-gcp-variables.tf  terraform.tfstate  terraform.tfstate.backup
labs/k8scloud/: README.md  gcp-gke-main.tf  gcp-gke-provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
labs/k8scloudmesh/: README.md  gcp-gke-main.tf
labs/vmcloud/: CREDENTIALS.sh  README.md  ansible.cfg  myhosts  outputs.tf  terraform-provider.tf  terraform-vmcloud-networks.tf  terraform-vmcloud-servers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  vmcloud-site-servers-setup-all.yml
labs/webfront/: Vagrantfile.docker  Vagrantfile.vbox  bootstrap.sh  hosts_ip.sh  hosts_ssh.sh
project/: .gitignore  README.md  Vagrantfile
project/adder/: adder.service  pyproject.toml  requirements.txt
project/adder/adder/: main.py
project/frontend/: package-lock.json
project/gcpcloud/: ansible-adder.yml  ansible-all.yaml  ansible-balancers.yml  ansible-frontend-ips.yaml  ansible-gcp-servers-setup-all copy.yml  ansible-gcp-servers-setup-all.yml  ansible-mongo.yaml  ansible-monitoring.yml  ansible-nodeServices.yml  ansible.cfg  inventory  inventory.tmpl  terraform-gcp-networks.tf  terraform-gcp-outputs.tf  terraform.tfstate  (+4 more)
(+56 files in other folders)
