[tool.poetry]
name = "adder"
version = "0.1.0"
description = ""
authors = ["Miguel Henriques <miguel.c.henriques22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standart"], version = "^0.19.0"}
motor = "^3.1.1"
pymongo = {extras = ["srv"], version = "^4.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
